# eval_engine

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.yaml  generate_loops.py  index.json  pyproject.toml  requirements.txt  results.json  seed_datasets.py
.github/ISSUE_TEMPLATE/: improve-loop.md  new-loop.md
.github/workflows/: update-index.yml  validate-loops.yml
docs/: HOW_TO_USE.md  adding-custom-loops.md  getting-started.md  loop-anatomy.md  taxonomy.md
loops/chaos-agent-infinite-loop-detection-and-circuit-breaking/: LOOP.md
loops/chaos-cascading-multi-agent-failure-propagation/: LOOP.md
loops/chaos-corrupted-context-injection/: LOOP.md
loops/chaos-llm-provider-api-timeout-recovery/: LOOP.md
loops/chaos-memory-store-corruption-recovery/: LOOP.md
loops/chaos-model-hot-swap-during-active-requests/: LOOP.md
loops/chaos-network-latency-degradation-simulation/: LOOP.md
loops/chaos-resource-contention-gpu-cpu-memory-spike/: LOOP.md
loops/chaos-tool-api-malformed-response-handling/: LOOP.md
loops/chaos-vector-database-outage-resilience/: LOOP.md
loops/evaluating-agent-argument-correctness/: LOOP.md
loops/evaluating-agent-plan-quality/: LOOP.md
loops/evaluating-agent-step-efficiency/: LOOP.md
loops/evaluating-agent-task-completion/: LOOP.md
tests/: conftest.py  mock_server.py  test_adapters.py  test_scorers.py  test_sdk_stress.py  test_stats.py
tools/: README.md  check-requirements.py  ingest_datasets.py  rebuild_datasets.py  seed_datasets_v2_part1.py  seed_datasets_v2_part2.py  validate-loop.py
(+401 files in other folders)
