[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-engine"
version = "0.1.0"
description = "Pluggable LLM evaluation, red-team, guardrail, stress, and chaos testing framework with concurrent runners and multiple scorer types."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "litellm>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
